--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
 
   <div class="footer">Fill Your Potential™</div>
 </div>
-<script src="script.js?v=12"></script>
+<script src="script.js"></script>
 </body>
 </html>
