--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
 
   <div class="footer">Fill Your Potential™</div>
 </div>
+  
+<script src="gasData.js"></script>
+<script src="conversion.js"></script>
 <script src="script.js"></script>
+
 </body>
 </html>
