--- a/index.html
+++ b/index.html
@@ -27,31 +27,16 @@
     </div>
   </div>
 
-<div class="form-row">
-  <div id="modeToggle" style="display:flex; gap:4px;">
-    <button id="modeVolume" class="toggle-btn active" onclick="toggleInputMode('volume')">Volume</button>
-    <button id="modeMass" class="toggle-btn" onclick="toggleInputMode('mass')">Mass</button>
+  <div class="input-row">
+    <div class="toggle-buttons">
+      <button id="modeVolume" class="toggle-btn active" onclick="toggleInputMode('volume')">Volume</button>
+      <button id="modeMass" class="toggle-btn" onclick="toggleInputMode('mass')">Mass</button>
+    </div>
+    <input type="number" id="volume" placeholder="Enter volume" />
   </div>
-</div>
 
-<div class="form-row">
-  <label for="volume"><span id="volumeModeLabel">Volume</span> (<span id="volumeUnitLabel">liters</span>)</label>
-  <input type="number" id="volume" />
-</div>
-
-  <div class="form-row">
-    <label for="toUnit">To unit</label>
-    <select id="toUnit">
-      <option value="liters" selected>Liters</option>
-      <option value="gallons">Gallons</option>
-      <option value="kg">Kilograms</option>
-      <option value="tons_metric">Tons (Metric)</option>
-      <option value="tons_us">Tons (US)</option>
-      <option value="pounds">Pounds</option>
-      <option value="standard_cubic_feet">SCF</option>
-      <option value="cubic_meters">Cubic Meters</option>
-    </select>
-  </div>
+  <label for="toUnit">Convert to</label>
+  <select id="toUnit"></select>
 
   <button id="convertButton" onclick="convertGas()">Convert</button>
 
@@ -62,6 +47,7 @@
     <ul>
       <li id="boilingPoint">Boiling Point: —</li>
       <li id="enthalpy">Enthalpy: —</li>
+      <li id="value0C">@0°C: —</li>
     </ul>
   </div>
 
