--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <div class="unit-row">
-    <label for="fromUnit" id="fromLabel">From (Volume):</label>
+    <label for="fromUnit" id="fromLabel">From (Vol.):</label>
     <select id="fromUnit"></select>
   </div>
 
